--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "lucide-react": "^0.294.0",
+    "@heroicons/react": "^2.0.18",
     "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
