--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "recharts": "^2.8.0",
     "react-datepicker": "^4.25.0",
     "react-select": "^5.8.0",
