--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,7 @@
     "react-csv": "^2.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3212 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -59,6 +59,6 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5001"
 }
 
